@@ -1,3 +1,12 @@
+2009-01-08  Christophe Romain <christophe.romain@process-one.net>
+
+	* src/mod_pubsub/mod_pubsub.erl: completely support subscription using
+	full JID (EJAB-701)
+	* src/mod_pubsub/node_default.erl: Likewise
+
+	* src/mod_pubsub/node_default.erl: any entity can retrieve item when
+	node access model is "open" (thanks to Myers Carpenter)(EJAB-836)
+
 2009-01-08	Pablo Polvorin	<pablo.polvorin@process-one.net>
 	* src/mod_vcard_ldap.erl, src/mod_muc/mod_muc.erl, src/mod_roster.hrl,
 	src/mod_offline_odbc.erl, src/ejabberd_s2s_in.erl, src/adhoc.erl,
